fixed vertical spacing between software cards

--- a/_sass/_software.scss
+++ b/_sass/_software.scss
@@ -49,6 +49,7 @@
 }
 
 .software-description {
+  margin-bottom: 0;
   font-family: SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', monospace;
   font-size: 1em;
 
